Fix anchor jumping

--- a/code/css/recovery.css
+++ b/code/css/recovery.css
@@ -258,3 +258,9 @@ svg {
     margin: 1.4%;
     font-size: 16px;
 }
+.anchor {
+    display: block; 
+    position: relative; 
+    top: -3.5em; 
+    visibility: hidden;
+}
